--- a/index.html
+++ b/index.html
@@ -59,36 +59,44 @@
             <h2 class="visually-hidden">Features</h2>
             <ul class="descr-list">
                 <li class="descr-item">
-                    <svg class="descr-icons" width="64px" height="64px">
-                        <use href="./images/icons/icons.svg#icon-antenna"></use>
+                    <div class="descr-item-icons">
+                    <svg class="descr-icons" width="64" height="64">
+                        <use href="./images/icons/icons.svg.svg#icon-antenna"></use>
                     </svg>
+                    </div>
                     <h3 class="description-title">Strategy</h3>
                     <p class="descr-info">Our goal is to identify the business problem to walk away with the perfect and
                         creative solution.</p>
 
                 </li>
                 <li class="descr-item">
-                    <svg class="descr-icons" width="64px" height="64px">
-                        <use href="./images/icons/icons.svg#icon-clock"></use>
+                    <div class="descr-item-icons">
+                    <svg class="descr-icons" width="64" height="64">
+                        <use href="./images/icons/icons.svg.svg#icon-clock"></use>
                     </svg>
+                    </div>
                     <h3 class="description-title">Punctuality</h3>
                     <p class="descr-info">Bring the key message to the brand's audience for the best price within the
                         shortest possible time.</p>
 
                 </li>
                 <li class="descr-item">
-                    <svg class="descr-icons" width="64px" height="64px">
-                        <use href="./images/icons/icons.svg#icon-diagram"></use>
+                    <div class="descr-item-icons">
+                    <svg class="descr-icons" width="64" height="64">
+                        <use href="./images/icons/icons.svg.svg#icon-diagram"></use>
                     </svg>
+                    </div>
                     <h3 class="description-title">Diligence</h3>
                     <p class="descr-info">Research and confirm brands that present the strongest digital growth
                         opportunities and minimize risk.</p>
 
                 </li>
                 <li class="descr-item">
-                    <svg class="descr-icons" width="64px" height="64px">
-                        <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                    <div class="descr-item-icons">
+                    <svg class="descr-icons" width="64" height="64">
+                        <use href="./images/icons/icons.svg.svg#icon-astronaut"></use>
                     </svg>
+                    </div>
                     <h3 class="description-title">Technologies</h3>
                     <p class="descr-info">Design practice focused on digital experiences. We bring forth a deep passion
                         for problem-solving.</p>
@@ -108,29 +116,30 @@
                     <p class="team-jobtitle">Product Designer</p>
                     <ul class="socials-list">
                         <li class="socials-item">
-                            <a class="socials-link instagram" href="">
-                            <svg class="team-icons" width="16px" height="16px">
-                                <use href="./images/icons/icons.svg#icon-instagram"></use>
+                            <a class="socials-link" href="">
+                            <svg class="team-icons" width="16" height="16">
+                                <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                         <li class="socials-item">
-                            <a class="socials-link twitter" href="">
-                            <svg class="team-icons" width="16px" height="16px">
-                                <use href="./images/icons/icons.svg#icon-twitter"></use>
+                            <a class="socials-link" href="">
+                            <svg class="team-icons" width="16" height="16">
+                                <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                         <li class="socials-item">
-                            <a class="socials-link facebook" href="">
-                            <svg class="team-icons" width="16px" height="16px">
-                                <use href="./images/icons/icons.svg#icon-facebook"></use>
+                            <a class="socials-link" href="">
+                            <svg class="team-icons" width="16" height="16">
+                                <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                         <li class="socials-item">
-                            <a class="socials-link linkedin" href=""><svg class="team-icons" width="16px" height="16px">
-                                <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                            <a class="socials-link" href="">
+                                <svg class="team-icons" width="16" height="16">
+                                <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -146,28 +155,29 @@
                     <ul class="socials-list">
                         <li class="socials-item">
                             <a class="socials-link instagram" href="">
-                                <svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link twitter" href="">
-                                <svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link facebook" href="">
-                                <svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link linkedin" href=""><svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                            <a class="socials-link linkedin" href="">
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -182,28 +192,29 @@
                     <ul class="socials-list">
                         <li class="socials-item">
                             <a class="socials-link instagram" href="">
-                                <svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link twitter" href="">
-                                <svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link facebook" href="">
-                                <svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link linkedin" href=""><svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                            <a class="socials-link linkedin" href="">
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -218,28 +229,29 @@
                     <ul class="socials-list">
                         <li class="socials-item">
                             <a class="socials-link instagram" href="">
-                                <svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link twitter" href="">
-                                <svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-twitter"></use>
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link facebook" href="">
-                                <svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-facebook"></use>
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link linkedin" href=""><svg class="team-icons" width="16px" height="16px">
-                                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                            <a class="socials-link linkedin" href="">
+                                <svg class="team-icons" width="16" height="16">
+                                    <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -345,30 +357,30 @@
                 <p class="bottom-page-text social-text">Social media</p>
                 <ul class="bottom-page-socials-list">
                     <li class="bottom-page-socials-item">
-                        <a class="bottom-page-socials-link instagram" href="">
-                            <svg class="bottom-page-icons" width="24px" height="24px">
-                                <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        <a class="bottom-page-socials-link" href="">
+                            <svg class="bottom-page-icons" width="24" height="24">
+                                <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="bottom-page-socials-item">
-                        <a class="bottom-page-socials-link twitter" href="">
-                            <svg class="bottom-page-icons" width="24px" height="24px">
-                                <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <a class="bottom-page-socials-link" href="">
+                            <svg class="bottom-page-icons" width="24" height="24">
+                                <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="bottom-page-socials-item">
-                        <a class="bottom-page-socials-link facebook" href="">
-                            <svg class="bottom-page-icons" width="24px" height="24px">
-                                <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        <a class="bottom-page-socials-link" href="">
+                            <svg class="bottom-page-icons" width="24" height="24">
+                                <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="bottom-page-socials-item">
-                        <a class="bottom-page-socials-link linkedin" href="">
-                            <svg class="bottom-page-icons" width="24px" height="24px">
-                                <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        <a class="bottom-page-socials-link" href="">
+                            <svg class="bottom-page-icons" width="24" height="24">
+                                <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
