--- a/index.html
+++ b/index.html
@@ -154,28 +154,28 @@
                     <p class="team-jobtitle">Frontend Developer</p>
                     <ul class="socials-list">
                         <li class="socials-item">
-                            <a class="socials-link instagram" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link twitter" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link facebook" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link linkedin" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
                                 </svg>
@@ -191,28 +191,28 @@
                     <p class="team-jobtitle">Marketing</p>
                     <ul class="socials-list">
                         <li class="socials-item">
-                            <a class="socials-link instagram" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link twitter" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link facebook" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link linkedin" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
                                 </svg>
@@ -228,28 +228,28 @@
                     <p class="team-jobtitle">UI Designer</p>
                     <ul class="socials-list">
                         <li class="socials-item">
-                            <a class="socials-link instagram" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link twitter" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link facebook" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
-                            <a class="socials-link linkedin" href="">
+                            <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
                                 </svg>
