--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li class="descr-item">
                     <div class="descr-item-icons">
                     <svg class="descr-icons" width="64" height="64">
-                        <use href="./images/icons/icons.svg.svg#icon-antenna"></use>
+                        <use href="./images/icons.svg.svg#icon-antenna"></use>
                     </svg>
                     </div>
                     <h3 class="description-title">Strategy</h3>
@@ -72,7 +72,7 @@
                 <li class="descr-item">
                     <div class="descr-item-icons">
                     <svg class="descr-icons" width="64" height="64">
-                        <use href="./images/icons/icons.svg.svg#icon-clock"></use>
+                        <use href="./images/icons.svg.svg#icon-clock"></use>
                     </svg>
                     </div>
                     <h3 class="description-title">Punctuality</h3>
@@ -83,7 +83,7 @@
                 <li class="descr-item">
                     <div class="descr-item-icons">
                     <svg class="descr-icons" width="64" height="64">
-                        <use href="./images/icons/icons.svg.svg#icon-diagram"></use>
+                        <use href="./images/icons.svg.svg#icon-diagram"></use>
                     </svg>
                     </div>
                     <h3 class="description-title">Diligence</h3>
@@ -94,7 +94,7 @@
                 <li class="descr-item">
                     <div class="descr-item-icons">
                     <svg class="descr-icons" width="64" height="64">
-                        <use href="./images/icons/icons.svg.svg#icon-astronaut"></use>
+                        <use href="./images/icons.svg.svg#icon-astronaut"></use>
                     </svg>
                     </div>
                     <h3 class="description-title">Technologies</h3>
@@ -118,28 +118,28 @@
                         <li class="socials-item">
                             <a class="socials-link" href="">
                             <svg class="team-icons" width="16" height="16">
-                                <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                             <svg class="team-icons" width="16" height="16">
-                                <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                             <svg class="team-icons" width="16" height="16">
-                                <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -156,28 +156,28 @@
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -193,28 +193,28 @@
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -230,28 +230,28 @@
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="socials-item">
                             <a class="socials-link" href="">
                                 <svg class="team-icons" width="16" height="16">
-                                    <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -359,28 +359,28 @@
                     <li class="bottom-page-socials-item">
                         <a class="bottom-page-socials-link" href="">
                             <svg class="bottom-page-icons" width="24" height="24">
-                                <use href="./images/icons/icons.svg.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="bottom-page-socials-item">
                         <a class="bottom-page-socials-link" href="">
                             <svg class="bottom-page-icons" width="24" height="24">
-                                <use href="./images/icons/icons.svg.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="bottom-page-socials-item">
                         <a class="bottom-page-socials-link" href="">
                             <svg class="bottom-page-icons" width="24" height="24">
-                                <use href="./images/icons/icons.svg.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="bottom-page-socials-item">
                         <a class="bottom-page-socials-link" href="">
                             <svg class="bottom-page-icons" width="24" height="24">
-                                <use href="./images/icons/icons.svg.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
